docs-archive/apache-airflow-providers-google/18.1.0/_sources/_api/airflow/providers/google/cloud/sensors/cloud_composer/index.rst.txt
airflow.providers.google.cloud.sensors.cloud_composer
=====================================================

.. py:module:: airflow.providers.google.cloud.sensors.cloud_composer

.. autoapi-nested-parse::

   This module contains a Cloud Composer sensor.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.sensors.cloud_composer.CloudComposerDAGRunSensor


Module Contents
---------------

.. py:class:: CloudComposerDAGRunSensor(*, project_id, region, environment_id, composer_dag_id, allowed_states = None, execution_range = None, composer_dag_run_id = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 10, use_rest_api = False, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseSensorOperator`


   Check if a DAG run has completed.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: The name of the Composer environment.
   :param composer_dag_id: The ID of executable DAG.
   :param allowed_states: Iterable of allowed states, default is ``['success']``.
   :param execution_range: execution DAGs time range. Sensor checks DAGs states only for DAGs which were
       started in this time range. For yesterday, use [positive!] datetime.timedelta(days=1).
       For future, use [negative!] datetime.timedelta(days=-1). For specific time, use list of
       datetimes [datetime(2024,3,22,11,0,0), datetime(2024,3,22,12,0,0)].
       Or [datetime(2024,3,22,0,0,0)] in this case sensor will check for states from specific time in the
       past till current time execution.
       Default value datetime.timedelta(days=1).
   :param composer_dag_run_id: The Run ID of executable task. The 'execution_range' param is ignored, if both specified.
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param poll_interval: Optional: Control the rate of the poll for the result of deferrable run.
   :param deferrable: Run sensor in deferrable mode.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'composer_dag_id', 'impersonation_chain')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: composer_dag_id


   .. py:attribute:: allowed_states


   .. py:attribute:: execution_range
      :value: None



   .. py:attribute:: composer_dag_run_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: poll_interval
      :value: 10



   .. py:attribute:: use_rest_api
      :value: False



   .. py:method:: poke(context)

      Override when deriving this class.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


   .. py:property:: hook
      :type: airflow.providers.google.cloud.hooks.cloud_composer.CloudComposerHook



